# rouglike-jrpg

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  run.sh
.claude/: settings.json
.claude/agents/: bevy-expert.md  commit-keeper.md  documentation-keeper.md  map-generation-expert.md  performance-optimizer.md  pixel-art-generator.md  qa-verifier.md  screenshot-reviewer.md  screenshot-verifier.md  software-architect.md  task-committer.md  test-engineer.md
.claude/skills/: architecture-patterns.md  bevy-0.18-patterns.md  documentation-workflow.md
.claude/skills/commit/: SKILL.md
.claude/skills/map-gen/: SKILL.md
app/app-state/: Cargo.toml
app/app-state/src/: lib.rs  resources.rs
app/battle/: Cargo.toml
app/battle-ui/: Cargo.toml
app/battle-ui/src/: display.rs  input.rs  lib.rs  scene.rs
app/battle/src/: combat.rs  lib.rs
app/cave/: Cargo.toml
app/cave-ui/: Cargo.toml
app/cave-ui/src/: input.rs  lib.rs  scene.rs
app/cave/src/: lib.rs
app/enemy/: Cargo.toml
app/enemy/src/: lib.rs
app/field-core/: Cargo.toml
app/field-core/src/: constants.rs  lib.rs  resources.rs
app/field-menu-ui/: Cargo.toml
app/field-menu-ui/src/: lib.rs
app/field-walk-ui/: Cargo.toml
app/field-walk-ui/src/: camera.rs  coast_lookup.rs  encounter.rs  field_message.rs  field_rendering.rs  field_smooth_move.rs  hud.rs  lib.rs  minimap.rs  player_input.rs  tile_action.rs  tile_pool.rs
app/field-walk/src/: movement.rs
app/hokora-ui/: Cargo.toml
app/hokora-ui/src/: input.rs  lib.rs  scene.rs
app/hud-ui/: Cargo.toml
app/hud-ui/src/: command_menu.rs  lib.rs  menu_style.rs
app/input-ui/src/: lib.rs
app/item/: Cargo.toml
app/item-data/: Cargo.toml
app/item-data/src/: lib.rs
app/item/src/: equipment.rs  item.rs  lib.rs
app/party/: Cargo.toml
app/party-data/: Cargo.toml
app/party-data/src/: lib.rs
app/party-state/: Cargo.toml
app/party-state/src/: lib.rs
app/party/src/: character_table.rs  lib.rs  party.rs  spell_table.rs  stats.rs
app/progress-state/: Cargo.toml
app/progress-state/src/: lib.rs
app/scene-state/: Cargo.toml
app/scene-state/src/: lib.rs
app/spell-data/: Cargo.toml
app/spell-data/src/: lib.rs
app/spell/src/: lib.rs
app/tavern-state/: Cargo.toml
app/tavern-state/src/: lib.rs
app/terrain/src/: coordinates.rs  lib.rs  structure_clearance.rs  test_utils.rs
app/town/: Cargo.toml
app/town-ui/: Cargo.toml
app/town-ui/src/: input.rs  lib.rs  scene.rs
app/town/src/: lib.rs
app/world-gen/: Cargo.toml
app/world-gen/src/: generation.rs  lib.rs
app/world-state/: Cargo.toml
app/world-state/src/: lib.rs
app/world-ui/src/: lib.rs
crates/animation-ui/: Cargo.toml
crates/animation-ui/src/: bounce.rs  lib.rs  smooth_move.rs
crates/app-state/: Cargo.toml
crates/app-state/src/: lib.rs  resources.rs
crates/battle/: Cargo.toml
crates/battle-ui/: Cargo.toml
crates/battle-ui/src/: display.rs  encounter.rs  field_menu.rs  field_spell.rs  input.rs  lib.rs  scene.rs
crates/battle/src/: combat.rs  encounter.rs  enemy.rs  lib.rs  spell.rs  spell_table.rs
crates/cave/: Cargo.toml
crates/cave-ui/: Cargo.toml
crates/cave-ui/src/: input.rs  lib.rs  scene.rs
crates/cave/src/: lib.rs
crates/components-ui/: Cargo.toml
crates/events-ui/: Cargo.toml
crates/events-ui/src/: lib.rs
crates/field-core/src/: components.rs  resources.rs
crates/field-menu-ui/: Cargo.toml
crates/field-menu-ui/src/: lib.rs
crates/field-walk/: Cargo.toml
crates/field-walk-ui/: Cargo.toml
crates/field-walk-ui/src/: bounce.rs  camera.rs  constants.rs  encounter.rs  events.rs  execute.rs  exploration_data.rs  field_rendering.rs  field_resources.rs  field_smooth_move.rs  lib.rs  map_mode.rs  minimap.rs  player_input.rs  rendering.rs  resources.rs  simple_tiles.rs  smooth_move.rs  tile_action.rs  tile_pool.rs
crates/field-walk/src/: lib.rs
crates/game/: Cargo.toml
crates/game-core/src/: coordinates.rs  lib.rs  party.rs  stats.rs  test_utils.rs
crates/game/src/: coordinates.rs  lib.rs  remote.rs  test_utils.rs  town.rs
crates/generate_tiles/: Cargo.toml
crates/generate_tiles/src/: main.rs
crates/hokora-ui/: Cargo.toml
crates/hokora-ui/src/: input.rs  lib.rs  scene.rs
crates/hud-ui/: Cargo.toml
crates/hud-ui/src/: lib.rs  menu_style.rs
crates/input-ui/: Cargo.toml
crates/input-ui/src/: lib.rs
crates/item/src/: equipment.rs
crates/movement-ui/: Cargo.toml
crates/movement-ui/src/: bounce.rs  components.rs  constants.rs  execute.rs  input.rs  lib.rs  resources.rs  smooth_move.rs
crates/party/: Cargo.toml
crates/party/src/: equipment.rs  item.rs  lib.rs  party.rs  spell_table.rs  stats.rs
crates/shared-ui/: Cargo.toml
crates/shared-ui/src/: constants.rs  lib.rs  resources.rs
crates/spell/: Cargo.toml
crates/spell/src/: lib.rs
crates/terrain/src/: coordinates.rs  lib.rs  movement.rs  terrain.rs
crates/time-ui/: Cargo.toml
crates/time-ui/src/: display.rs  lib.rs  resources.rs
crates/time/src/: lib.rs
crates/town/: Cargo.toml
crates/town-ui/: Cargo.toml
crates/town-ui/src/: input.rs  lib.rs  scene.rs
crates/town/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: app_state.rs  bounce.rs  (+20 more)
crates/world/: Cargo.toml
crates/world-ui/: Cargo.toml
crates/world-ui/src/: camera.rs  coast_lookup.rs  encounter.rs  hud.rs  lib.rs  map_mode.rs  minimap.rs  movement_helpers.rs  player_input.rs  rendering.rs  smooth_move.rs  tile_action.rs  tile_pool.rs
docs/: game-spec.md
screenshots/: capture_all.sh
screenshots/battle/: Cargo.toml
screenshots/battle/src/: main.rs
screenshots/cave/: Cargo.toml
screenshots/cave/src/: main.rs
screenshots/common/: Cargo.toml
screenshots/field/: Cargo.toml
screenshots/field/src/: main.rs
screenshots/town/: Cargo.toml
screenshots/town/src/: main.rs
screenshots/world/: Cargo.toml
src/: main.rs  map.rs
src/game/: mod.rs
src/ui/: bounce.rs  camera.rs  constants.rs  mod.rs  player_view.rs  rendering.rs
tests/: integration_tests.rs
tools/deps_mermaid/: Cargo.toml
tools/generate_tiles/: Cargo.toml
tools/merge_work/: Cargo.toml
(+115 files in other folders)
