[package]
name = "rouglike-jrpg"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
rand = "0.8"
app-state = { path = "crates/app-state" }
battle = { path = "crates/battle" }
battle-ui = { path = "crates/battle-ui" }
cave-ui = { path = "crates/cave-ui" }
movement-ui = { path = "crates/movement-ui" }
shared-ui = { path = "crates/shared-ui" }
terrain = { path = "crates/terrain" }
town-ui = { path = "crates/town-ui" }
world = { path = "crates/world" }
time = { path = "crates/time" }
time-ui = { path = "crates/time-ui" }
world-ui = { path = "crates/world-ui" }

[dev-dependencies]
rand_chacha = "0.3"

[workspace]
members = [
    "crates/terrain",
    "crates/party",
    "crates/world",
    "crates/town",
    "crates/cave",
    "crates/battle",
    "crates/app-state",
    "crates/input-ui",
    "crates/shared-ui",
    "crates/movement-ui",
    "crates/battle-ui",
    "crates/town-ui",
    "crates/world-ui",
    "crates/cave-ui",
    "crates/time",
    "crates/time-ui",
    "tools/generate_tiles",
    "tools/deps_mermaid",
    "tools/merge_work",
]
