[package]
name = "rouglike-jrpg"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
rand = "0.8"
app-state = { path = "crates/app-state" }
battle = { path = "crates/battle" }
battle-ui = { path = "crates/battle-ui" }
cave-ui = { path = "crates/cave-ui" }
hokora-ui = { path = "crates/hokora-ui" }
field-core = { path = "crates/field-core" }
terrain = { path = "crates/terrain" }
town-ui = { path = "crates/town-ui" }
field-walk-ui = { path = "crates/field-walk-ui" }

[dev-dependencies]
rand_chacha = "0.3"
party = { path = "crates/party" }
cave = { path = "crates/cave" }
town = { path = "crates/town" }
field-walk = { path = "crates/field-walk" }
world-gen = { path = "crates/world-gen" }

[workspace]
members = [
    "crates/terrain",
    "crates/field-core",
    "crates/field-walk",
    "crates/field-walk-ui",
    "crates/world-gen",
    "crates/party",
    "crates/spell",
    "crates/town",
    "crates/cave",
    "crates/battle",
    "crates/app-state",
    "crates/input-ui",
    "crates/battle-ui",
    "crates/town-ui",

    "crates/cave-ui",
    "crates/hokora-ui",
    "tools/generate_tiles",
    "tools/deps_mermaid",
    "tools/merge_work",
    "screenshots/common",
    "screenshots/battle",
    "screenshots/town",
    "screenshots/field",
    "screenshots/cave",
    "screenshots/world",
]
