[package]
name = "rouglike-jrpg"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
rand = "0.8"
app-state = { path = "app/app-state" }
battle = { path = "app/battle" }
battle-ui = { path = "app/battle-ui" }
cave-ui = { path = "app/cave-ui" }
field-menu-ui = { path = "app/field-menu-ui" }
hokora-ui = { path = "app/hokora-ui" }
field-core = { path = "app/field-core" }
terrain = { path = "app/terrain" }
town-ui = { path = "app/town-ui" }
field-walk-ui = { path = "app/field-walk-ui" }

[dev-dependencies]
rand_chacha = "0.3"
item = { path = "app/item" }
party = { path = "app/party" }
cave = { path = "app/cave" }
town = { path = "app/town" }
field-walk = { path = "app/field-walk" }
world-gen = { path = "app/world-gen" }

[workspace]
members = [
    "app/terrain",
    "app/field-core",
    "app/field-walk",
    "app/field-walk-ui",
    "app/world-gen",
    "app/item",
    "app/party",
    "app/spell",
    "app/town",
    "app/cave",
    "app/battle",
    "app/app-state",
    "app/input-ui",
    "app/battle-ui",
    "app/town-ui",

    "app/hud-ui",
    "app/cave-ui",
    "app/field-menu-ui",
    "app/hokora-ui",
    "tools/generate_tiles",
    "tools/deps_mermaid",
    "tools/merge_work",
    "screenshots/common",
    "screenshots/battle",
    "screenshots/town",
    "screenshots/field",
    "screenshots/cave",
    "screenshots/world",
]
