[package]
name = "battle-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
rand = "0.8"
battle = { path = "../battle" }
enemy = { path = "../enemy" }
spell = { path = "../spell" }
item = { path = "../item" }
item-data = { path = "../item-data" }
party = { path = "../party" }
scene-state = { path = "../scene-state" }
party-state = { path = "../party-state" }
progress-state = { path = "../progress-state" }
world-state = { path = "../world-state" }
input-ui = { path = "../input-ui" }
hud-ui = { path = "../hud-ui" }
