[package]
name = "field-menu-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
rand = "0.8"
item = { path = "../item" }
item-data = { path = "../item-data" }
party = { path = "../party" }
spell = { path = "../spell" }
scene-state = { path = "../scene-state" }
party-state = { path = "../party-state" }
field-walk-ui = { path = "../field-walk-ui" }
input-ui = { path = "../input-ui" }
hud-ui = { path = "../hud-ui" }
