[package]
name = "field-walk-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
rand = "0.8"
terrain = { path = "../terrain" }
party = { path = "../party" }
scene-state = { path = "../scene-state" }
world-state = { path = "../world-state" }
input-ui = { path = "../input-ui" }
field-core = { path = "../field-core" }
field-walk = { path = "../field-walk" }
hud-ui = { path = "../hud-ui" }
world-gen = { path = "../world-gen" }
