[package]
name = "hokora-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
item = { path = "../item" }
item-data = { path = "../item-data" }
party = { path = "../party" }
scene-state = { path = "../scene-state" }
party-state = { path = "../party-state" }
world-state = { path = "../world-state" }
terrain = { path = "../terrain" }
input-ui = { path = "../input-ui" }
field-core = { path = "../field-core" }
hud-ui = { path = "../hud-ui" }
