[package]
name = "town-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
rand = "0.8"
town = { path = "../town" }
item = { path = "../item" }
item-data = { path = "../item-data" }
party = { path = "../party" }
scene-state = { path = "../scene-state" }
party-state = { path = "../party-state" }
world-state = { path = "../world-state" }
tavern-state = { path = "../tavern-state" }
input-ui = { path = "../input-ui" }
field-core = { path = "../field-core" }
hud-ui = { path = "../hud-ui" }
