[package]
name = "battle-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
rand = "0.8"
battle = { path = "../battle" }
app-state = { path = "../app-state" }
shared-ui = { path = "../shared-ui" }
components-ui = { path = "../components-ui" }
events-ui = { path = "../events-ui" }
input-ui = { path = "../input-ui" }
animation-ui = { path = "../animation-ui" }
