[package]
name = "cave-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
rand = "0.8"
cave = { path = "../cave" }
terrain = { path = "../terrain" }
app-state = { path = "../app-state" }
input-ui = { path = "../input-ui" }
shared-ui = { path = "../shared-ui" }
movement-ui = { path = "../movement-ui" }
world-ui = { path = "../world-ui" }
