[package]
name = "cave-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
rand = "0.8"
rand_chacha = "0.3"
cave = { path = "../cave" }
party = { path = "../party" }
terrain = { path = "../terrain" }
app-state = { path = "../app-state" }
input-ui = { path = "../input-ui" }
field-core = { path = "../field-core" }
field-walk-ui = { path = "../field-walk-ui" }
