[package]
name = "field-walk-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
rand = "0.8"
terrain = { path = "../terrain" }
party = { path = "../party" }
app-state = { path = "../app-state" }
input-ui = { path = "../input-ui" }
field-core = { path = "../field-core" }
field-walk = { path = "../field-walk" }
