[package]
name = "world-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
rand = "0.8"
world = { path = "../world" }
terrain = { path = "../terrain" }
app-state = { path = "../app-state" }
components-ui = { path = "../components-ui" }
events-ui = { path = "../events-ui" }
input-ui = { path = "../input-ui" }
shared-ui = { path = "../shared-ui" }
animation-ui = { path = "../animation-ui" }
