[package]
name = "world-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
rand = "0.8"
world = { path = "../world" }
terrain = { path = "../terrain" }
party = { path = "../party" }
app-state = { path = "../app-state" }
input-ui = { path = "../input-ui" }
movement-ui = { path = "../movement-ui" }
