[package]
name = "screenshot-battle"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "screenshot-battle"
path = "src/main.rs"

[dependencies]
bevy = "0.18"
screenshot-common = { path = "../common" }
app-state = { path = "../../app/app-state" }
spell-data = { path = "../../app/spell-data" }
battle = { path = "../../app/battle" }
battle-ui = { path = "../../app/battle-ui" }
hud-ui = { path = "../../app/hud-ui" }
