[package]
name = "screenshot-battle"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "screenshot-battle"
path = "src/main.rs"

[dependencies]
bevy = "0.18"
screenshot-common = { path = "../common" }
app-state = { path = "../../app/app-state" }
spell-data = { path = "../../app/spell-data" }
party-data = { path = "../../app/party-data" }
battle = { path = "../../app/battle" }
enemy = { path = "../../app/enemy" }
battle-ui = { path = "../../app/battle-ui" }
item-data = { path = "../../app/item-data" }
hud-ui = { path = "../../app/hud-ui" }
