[package]
name = "screenshot-cave"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "screenshot-cave"
path = "src/main.rs"

[dependencies]
bevy = "0.18"
rand = "0.8"
rand_chacha = "0.3"
screenshot-common = { path = "../common" }
app-state = { path = "../../crates/app-state" }
cave = { path = "../../crates/cave" }
field-core = { path = "../../crates/field-core" }
field-walk-ui = { path = "../../crates/field-walk-ui" }
