[package]
name = "screenshot-cave"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "screenshot-cave"
path = "src/main.rs"

[dependencies]
bevy = "0.18"
rand = "0.8"
rand_chacha = "0.3"
screenshot-common = { path = "../common" }
progress-state = { path = "../../app/progress-state" }
cave = { path = "../../app/cave" }
field-core = { path = "../../app/field-core" }
field-walk-ui = { path = "../../app/field-walk-ui" }
terrain = { path = "../../app/terrain" }
