[package]
name = "screenshot-field"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "screenshot-field"
path = "src/main.rs"

[dependencies]
bevy = "0.18"
screenshot-common = { path = "../common" }
app-state = { path = "../../crates/app-state" }
field-core = { path = "../../crates/field-core" }
terrain = { path = "../../crates/terrain" }
world-ui = { path = "../../crates/world-ui" }
