[package]
name = "screenshot-field"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "screenshot-field"
path = "src/main.rs"

[dependencies]
bevy = "0.18"
screenshot-common = { path = "../common" }
party-state = { path = "../../app/party-state" }
party-data = { path = "../../app/party-data" }
field-core = { path = "../../app/field-core" }
terrain = { path = "../../app/terrain" }
field-walk-ui = { path = "../../app/field-walk-ui" }
