[package]
name = "screenshot-town"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "screenshot-town"
path = "src/main.rs"

[dependencies]
bevy = "0.18"
screenshot-common = { path = "../common" }
app-state = { path = "../../app/app-state" }
item = { path = "../../app/item" }
town-ui = { path = "../../app/town-ui" }
hud-ui = { path = "../../app/hud-ui" }
