[package]
name = "screenshot-town"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "screenshot-town"
path = "src/main.rs"

[dependencies]
bevy = "0.18"
screenshot-common = { path = "../common" }
party-state = { path = "../../app/party-state" }
party-data = { path = "../../app/party-data" }
item-data = { path = "../../app/item-data" }
town-ui = { path = "../../app/town-ui" }
hud-ui = { path = "../../app/hud-ui" }
